root x overflow hidden to prevent whole page unwanted horizontal scroll

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,6 +4,7 @@
   width: calc(100dvw - 30px);
   padding: 10px 15px 15px;
   overflow-y: overlay;
+  overflow-x: hidden;
 }
 
 .logo {
